Setup folder structure, added lerna, almost finished the server.

--- a/package.json
+++ b/package.json
@@ -1,12 +1,26 @@
 {
   "name": "vitalprep",
+  "private": true,
+  "license": "GPL-3.0-only",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Main VitalPrep package.",
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "lerna run build",
+    "clean": "lerna clean",
+    "migration": "npx prisma migrate dev --schema=./packages/server/prisma/schema.prisma",
+    "generation": "npx prisma generate --schema=./packages/server/prisma/schema.prisma"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-node": "^4.1.0",
+    "eslint-plugin-airbnb": "^0.0.1-security",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "lerna": "^8.1.2",
+    "prettier": "^3.2.5"
+  }
 }
