--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "npx prisma generate --schema ../server/prisma/schema.prisma && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test":"jest --watch"
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
@@ -26,6 +27,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "jest": "^29.7.0",
     "sass": "^1.71.1",
     "sass-loader": "^14.1.1",
     "typescript": "^5"
