--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -7,13 +7,14 @@
     "build": "npx prisma generate --schema ../server/prisma/schema.prisma && next build",
     "start": "next start",
     "lint": "next lint",
-    "test":"jest --watch"
+    "test": "jest --watch"
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "next": "14.1.0",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
