Made a silly mistake when using the npm start script.

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,7 +7,7 @@
     "build": "npm install",
     "transpile": "npm uninstall typescript && npm install typescript && tsc",
     "migrate": "npm uninstall prisma && npm install prisma && npx prisma migrate deploy && npx prisma generate",
-    "start": "node build/index.js"
+    "start": "node dist/index.js"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
