--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,9 +13,12 @@
     "@prisma/client": "^5.10.2",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.2",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "next": "14.1.0",
     "next-auth": "^4.24.7",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.0.1",
