--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "npm install",
-    "transpile": "npm uninstall typescript && npm install typescript && tsc",
-    "migrate": "npm uninstall prisma && npm install prisma && npx prisma migrate deploy && npx prisma generate",
+    "transpile": "npm uninstall typescript && npm install typescript@5.3.3 && tsc",
+    "migrate": "npm uninstall prisma && npm install prisma@5.10.2 && npx prisma migrate deploy && npx prisma generate",
     "start": "node dist/index.js"
   },
   "devDependencies": {
