--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
       "sourceMap": true,
       "outDir": "dist",
-      "strict": false,
+      "strict": true,
       "lib": ["ESNext"],
       "esModuleInterop": true,
       "module": "CommonJS",
