--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -23,6 +23,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.1",
+    "react-onesignal": "^3.0.1",
     "react-redux": "^9.1.0",
     "react-spinners": "^0.13.8"
   },
