--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,6 +10,7 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^4.41.3",
     "@prisma/client": "^5.10.2",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
