--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "prettier": "^3.2.5"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "onesignal-node": "^3.4.0",
     "react-onesignal": "^3.0.1"
   }
 }
