Worked more on the OneSignal notification system. Took me quite a while and its not even close to being finished.

--- a/packages/jobs/tsconfig.json
+++ b/packages/jobs/tsconfig.json
@@ -10,5 +10,6 @@
       "skipLibCheck": true,
       "noImplicitAny": false
     },
-    "exclude": ["node_modules",".env"]
+    "include": ["src/*.ts"],
+    "exclude": ["node_modules",".env","dist"]
   }
