--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "node src/handleMealPrepSessionReminders.js"
+    "day": "npx tsx src/handleDayOfTheWeekReminders.ts",
+    "hour": "npx tsx src/handleEveryHourReminders.ts"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,8 @@
   "dependencies": {
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
-    "onesignal-node": "^3.4.0"
+    "onesignal-node": "^3.4.0",
+    "tsx": "^4.8.2",
+    "typescript": "^5.4.5"
   }
 }
