Refactored a few things.

--- a/packages/server/.env.sample
+++ b/packages/server/.env.sample
@@ -1,32 +1,32 @@
-# # GENERAL ENV
-# PORT = 4000
+# GENERAL ENV
+PORT = 4000
 
-# # JWT
-# JWT_SECRET_KEY = your_jwt_secret_key
-# JWT_EXP_TIME = 32 * 3600
+# JWT
+JWT_SECRET_KEY = your_jwt_secret_key
+JWT_EXP_TIME = 32 * 3600
 
-# # SECURITY and EXPIRATIONS
-# MAX_RATE_LIMIT = 1500
-# CORS_TESTING_CLIENT_ORIGIN = http://localhost:3000
-# CORS_PRODUCTION_CLIENT_ORIGIN = https://vitalprep-helper.com
-# ADMIN_USE_UNIQUE_IDENTIFIER = your_unique_identifier
-# ADMIN_PRIVILEGES_SECRET = your_privileges_secret
+# SECURITY and EXPIRATIONS
+MAX_RATE_LIMIT = 1500
+CORS_TESTING_CLIENT_ORIGIN = http://localhost:3000
+CORS_PRODUCTION_CLIENT_ORIGIN = https://vitalprep-helper.com
+ADMIN_USE_UNIQUE_IDENTIFIER = your_unique_identifier
+ADMIN_PRIVILEGES_SECRET = your_privileges_secret
 
-# # REDIS
-# REDIS_CACHE_EXP_TIME = 32 * 3600
-# REDIS_HOST = 
-# REDIS_PASSWORD = 
-# REDIS_PORT = 
-# REDIS_COMMANDER_PORT = 8081
+# REDIS
+REDIS_CACHE_EXP_TIME = 32 * 3600
+REDIS_HOST = 
+REDIS_PASSWORD = 
+REDIS_PORT = 
+REDIS_COMMANDER_PORT = 8081
 
-# # POSTGRESQL
-# PGHOST = 
-# PGDATABASE = 
-# PGUSERNAME = 
-# PGPASSWORD =
-# PGPORT = 
-# ADMINER_PORT = 8080
+# POSTGRESQL
+PGHOST = 
+PGDATABASE = 
+PGUSERNAME = 
+PGPASSWORD =
+PGPORT = 
+ADMINER_PORT = 8080
 
-# # DB URLS
-# DATABASE_URL=postgres://${PGUSERNAME}:${PGPASSWORD}@${PGHOST}:${PGPORT}/${PGDATABASE}
-# REDIS_INSTANCE_URL=redis://:${REDIS_PASSWORD}@${REDIS_HOST}:${REDIS_PORT}
+# DB URLS
+DATABASE_URL=postgres://${PGUSERNAME}:${PGPASSWORD}@${PGHOST}:${PGPORT}/${PGDATABASE}
+REDIS_INSTANCE_URL=redis://:${REDIS_PASSWORD}@${REDIS_HOST}:${REDIS_PORT}
