--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -22,6 +22,7 @@
     "next-auth": "^4.24.7",
     "next-i18next": "^15.3.0",
     "next-intl": "^3.14.0",
+    "next-pwa": "^5.6.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
@@ -42,6 +43,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "jest": "^29.7.0",
+    "pwa-asset-generator": "^6.3.1",
     "sass": "^1.71.1",
     "sass-loader": "^14.1.1",
     "typescript": "^5"
