--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,6 +10,7 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.7",
     "@netlify/plugin-nextjs": "^4.41.3",
     "@prisma/client": "^5.10.2",
     "@reduxjs/toolkit": "^2.2.1",
@@ -46,6 +47,7 @@
     "pwa-asset-generator": "^6.3.1",
     "sass": "^1.71.1",
     "sass-loader": "^14.1.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack": "^5.92.1"
   }
 }
