Updated project due to domain name change.

--- a/.env.sample
+++ b/.env.sample
@@ -34,7 +34,7 @@ ADMINER_PORT = 8080
 MAX_RATE_LIMIT = 1500
 ADMIN_USE_UNIQUE_IDENTIFIER = unique_identifier
 CORS_TESTING_CLIENT_ORIGIN = http://localhost:3000
-CORS_PRODUCTION_CLIENT_ORIGIN = https://vitalprep-helper.com
+CORS_PRODUCTION_CLIENT_ORIGIN = https://vitalprep-meal.com
 REDIS_CACHE_EXP_TIME = 32 * 3600
 JWT_EXP_TIME = 32 * 3600
 
