--- a/packages/server/.env.sample
+++ b/packages/server/.env.sample
@@ -9,7 +9,7 @@ JWT_EXP_TIME = 32 * 3600
 # SECURITY and EXPIRATIONS
 MAX_RATE_LIMIT = 1000
 CORS_TESTING_CLIENT_ORIGIN = http://localhost:3000
-CORS_PRODUCTION_CLIENT_ORIGIN = https://vitalprep-helper.com
+CORS_PRODUCTION_CLIENT_ORIGIN = https://vitalprep-meal.com
 ADMIN_USE_UNIQUE_IDENTIFIER = your_unique_identifier
 ADMIN_PRIVILEGES_SECRET = your_privileges_secret
 
