--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "build": "npm install",
-    "transpile": "npm uninstall typescript && npm install typescript@5.3.3 && tsc",
-    "migrate": "npm uninstall prisma && npm uninstall @prisma/client && npm install prisma@5.10.2 && npm install @prisma/client@latest && npx prisma migrate deploy && npx prisma generate",
+    "build": "npm install; tsc",
+    "migrate": "npx prisma migrate deploy",
+    "generate": "npx prisma generate",
     "start": "node dist/index.js"
   },
   "devDependencies": {
